tests/fixtures/invalid/aggregate_cast_unsupported.c
struct Point { int x; };

int main(void) {
    struct Point p = {1};
    return (struct Point)p;
}
